api controller and http controller reconcile logic added

--- a/apk-agent/internal/operator/config/crd/bases/dp.wso2.com_apis.yaml
+++ b/apk-agent/internal/operator/config/crd/bases/dp.wso2.com_apis.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
-  # creationTimestamp: null
+  creationTimestamp: null
   name: apis.dp.wso2.com
 spec:
   group: dp.wso2.com
@@ -59,19 +59,23 @@ spec:
                   of the API in a ConfigMap.
                 minLength: 4
                 type: string
-              prodHTTPRouteRefs:
+              prodHTTPRouteRef:
                 description: 'ProdHTTPRouteRefs contains a list of references to HttpRoutes
                   of type HttpRoute. xref: https://github.com/kubernetes-sigs/gateway-api/blob/main/apis/v1beta1/httproute_types.go'
-                items:
-                  type: string
-                type: array
+                minLength: 4
+                type: string
+              sandHTTPRouteRef:
+                description: 'SandHTTPRouteRef contains a list of references to HttpRoutes
+                  of type HttpRoute. xref: https://github.com/kubernetes-sigs/gateway-api/blob/main/apis/v1beta1/httproute_types.go'
+                minLength: 4
+                type: string
             required:
             - apiDisplayName
             - apiType
             - apiVersion
             - context
             - definitionFileRef
-            - prodHTTPRouteRefs
+            - prodHTTPRouteRef
             type: object
           status:
             description: APIStatus defines the observed state of API
